--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="logo">
-      <h1>Timothy Tan</h1>
-    </div>
-    <div class="navigation">
-      <a class = "active" href="#home">Home</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#about">About</a>
-    </div>
-    <div class="mainContent">Main Content</div>
-    <div class="sideContent">Side Content</div>
-    <div class="footer">Footer</div>
-  </div>
+  <header>
+    <h1>Timothy Tan</h1>
+  </header>
+  <nav>
+    <a class = "active" href="#home">Home</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  
+  <main>
+    Main content
+
+  </main>
+  
+  <aside>
+    Side Content
+
+  </aside>
+  
+  <footer>
+      Footer
+  </footer>
+  
+  
 
 </body>
 
