--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     </nav>
 
   <header>
-      <img src="/img/death-star-trooper-05.jpg" alt="me!" width=100px height=100px>
+      <div class="flicker-4">
+      <img class="profile" src="/img/death-star-trooper-05.jpg" alt="me!" width=100px height=100px>
+    </div>  
     <h1>Nat Yhtomit</h1>
     <p>
       Coruscant. 
@@ -37,6 +39,7 @@
   <main>
     <ul class='boxes'>
       <li class='left'>
+        <a href="www.test.com"></a>
         <div class="boxes_text-wrapper">
           <h2>Rebel Base Finder</h2>
           <p>Pinpointing the exact location based on past data.</p>
@@ -62,7 +65,7 @@
   </footer>
   
   
-
+<script src="main.js"></script>
 </body>
 
 </html>
